--- a/index.html
+++ b/index.html
@@ -111,8 +111,12 @@
             <div id="menu">
                 <div class="color-controls">
                     <button class="menubutton red" onclick="changeColor('red')" title="Red"></button>
-                    <button class="menubutton white" onclick="changeColor('white')" title="White"></button>
                     <button class="menubutton blue" onclick="changeColor('blue')" title="Blue"></button>
+                    <button class="menubutton eraser" onclick="setEraser()" title="Eraser">
+                        <svg viewBox="0 0 24 24" width="16" height="16">
+                            <path fill="currentColor" d="M16.24 3.56l4.95 4.94c.78.79.78 2.05 0 2.84L12 20.53a4.008 4.008 0 0 1-5.66 0L2.81 17c-.78-.79-.78-2.05 0-2.84l10.6-10.6c.79-.78 2.05-.78 2.83 0zM4.22 15.58l3.54 3.53c.78.79 2.04.79 2.83 0l7.07-7.07-6.37-6.37-7.07 7.07c-.79.79-.79 2.05 0 2.84z"/>
+                        </svg>
+                    </button>
                 </div>
                 <div class="size-controls">
                     <button class="menuButton plusMinus" onclick="decreaseSize();">−</button>
